# Lesson_29

./: README.md  pyproject.toml
ads/: admin.py  models_old.py
ads/migrations/: 0001_initial.py
ads/models/: models.py
ads/serializers/: ad.py  location.py
ads/views/: ad.py  category.py  locations.py
project/: settings.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py
users/views/: user.py
